// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`logout page component renders the logout page correctly with avatar using avatarurl)  1`] = `
<div
  className="logout-page"
>
  <ForwardRef(Paper)
    sx={[Function]}
  >
    <ForwardRef(Avatar)
      alt="user"
      src="test_url"
      sx={
        Object {
          "margin": 1,
        }
      }
    />
    <ForwardRef(Typography)
      sx={
        Object {
          "marginTop": 1,
        }
      }
    >
      username-description
    </ForwardRef(Typography)>
    <ForwardRef(Typography)
      sx={
        Object {
          "fontSize": "17px",
          "fontWeight": "bold",
          "paddingTop": "3px",
        }
      }
    >
      simple/root
    </ForwardRef(Typography)>
    <Styled(ForwardRef(Typography))>
      logout-message
    </Styled(ForwardRef(Typography))>
    <ForwardRef(Button)
      color="primary"
      data-test-id="logout-page-button"
      onClick={[Function]}
      sx={
        Object {
          "marginTop": 1,
        }
      }
      variant="contained"
    >
      <ForwardRef(Typography)
        color="inherit"
        noWrap={true}
        sx={
          Object {
            "marginTop": "3px",
          }
        }
      >
        logout-button
      </ForwardRef(Typography)>
    </ForwardRef(Button)>
  </ForwardRef(Paper)>
</div>
`;

exports[`logout page component renders the logout page correctly with default avatar  1`] = `
<div
  className="logout-page"
>
  <ForwardRef(Paper)
    sx={[Function]}
  >
    <ForwardRef(Avatar)
      sx={
        Object {
          "backgroundColor": [Function],
          "color": "#FFFFFF",
          "margin": 1,
        }
      }
    >
      <Memo(ForwardRef(AccountCircleIcon)) />
    </ForwardRef(Avatar)>
    <ForwardRef(Typography)
      sx={
        Object {
          "marginTop": 1,
        }
      }
    >
      username-description
    </ForwardRef(Typography)>
    <ForwardRef(Typography)
      sx={
        Object {
          "fontSize": "17px",
          "fontWeight": "bold",
          "paddingTop": "3px",
        }
      }
    >
      simple/root
    </ForwardRef(Typography)>
    <Styled(ForwardRef(Typography))>
      logout-message
    </Styled(ForwardRef(Typography))>
    <ForwardRef(Button)
      color="primary"
      data-test-id="logout-page-button"
      onClick={[Function]}
      sx={
        Object {
          "marginTop": 1,
        }
      }
      variant="contained"
    >
      <ForwardRef(Typography)
        color="inherit"
        noWrap={true}
        sx={
          Object {
            "marginTop": "3px",
          }
        }
      >
        logout-button
      </ForwardRef(Typography)>
    </ForwardRef(Button)>
  </ForwardRef(Paper)>
</div>
`;
